Attribute update - FIX : No text overflow

--- a/src/components/Attribute.css
+++ b/src/components/Attribute.css
@@ -23,3 +23,7 @@
 	padding-top: 5px;
 	padding-bottom: 5px;
 }
+.attribute-text{ 
+	line-height: 20px;
+	display: inline-block;
+}
